// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MatchPath matches a path 1`] = `
<pre>
  {
  "location": {
    "pathname": "/groups/123"
  },
  "match": {
    "groupId": "123",
    "uri": "/groups/123",
    "path": "/groups/:groupId"
  }
}
</pre>
`;

exports[`disrespect has complete disrespect for leading and trailing slashes 1`] = `
<div>
  Dash 
  <div>
    Reports 
    <div>
      Annual Report
    </div>
  </div>
</div>
`;

exports[`links renders links with relative hrefs 1`] = `
<div>
  <h1>
    Parent
  </h1>
  <a
    href="/dash/reports"
    location={
      Object {
        "pathname": "/dash/reports",
      }
    }
    onClick={[Function]}
  >
    /dash/reports
  </a>
  <div>
    <h2>
      Child
    </h2>
    <a
      href="/dash"
      location={
        Object {
          "pathname": "/dash/reports",
        }
      }
      onClick={[Function]}
    >
      /dash
    </a>
  </div>
</div>
`;

exports[`nested rendering matches multiple nested / down to a child with a path 1`] = `
<div>
  Dash 
  <div>
    Dash 
    <div>
      Dash 
    </div>
  </div>
</div>
`;

exports[`nested rendering renders a child 'index' nested path 1`] = `
<div>
  Dash 
  <div>
    Reports 
  </div>
</div>
`;

exports[`nested rendering renders a nested path 1`] = `
<div>
  Dash 
  <div>
    Reports 
  </div>
</div>
`;

exports[`nested rendering renders a really nested path 1`] = `
<div>
  Dash 
  <div>
    Reports 
    <div>
      Annual Report
    </div>
  </div>
</div>
`;

exports[`nested rendering yo dawg 1`] = `
<div>
  Dash 
  <div>
    Dash 
    <div>
      Dash 
    </div>
  </div>
</div>
`;

exports[`nested routers allows arbitrary Router nesting through context 1`] = `
<div>
  Home
  <div>
    Chat Home
  </div>
</div>
`;

exports[`passed props parses dynamic segments and passes to components 1`] = `
<div>
  Group: 
  123
</div>
`;

exports[`passed props parses multiple params when nested 1`] = `
<div>
  123
  <div>
    123
     - 
    456
  </div>
</div>
`;

exports[`passed props passes the matched URI to the component 1`] = `
<pre>
  {
  "path": "/groups/:groupId/users/:userId",
  "groupId": "123",
  "userId": "456",
  "uri": "/groups/123/users/456",
  "location": {
    "pathname": "/groups/123/users/456"
  }
}
</pre>
`;

exports[`passed props shadows params in nested paths 1`] = `
<div>
  Group: 
  burger
  <div>
    Group: 
    milkshake
  </div>
</div>
`;

exports[`route ranking / 1`] = `
<div>
  Root
</div>
`;

exports[`route ranking /groups 1`] = `
<div>
  Groups
</div>
`;

exports[`route ranking /groups/123 1`] = `
<div>
  Group Id: 
  123
</div>
`;

exports[`route ranking /groups/123/users 1`] = `
<div>
  Users
</div>
`;

exports[`route ranking /groups/123/users/456 1`] = `
<div>
  User id: 
  456
  , Group Id: 
  123
</div>
`;

exports[`route ranking /groups/123/users/a/bunch/of/junk 1`] = `
<div>
  Users Splat: 
</div>
`;

exports[`route ranking /groups/123/users/me 1`] = `
<div>
  Me!
</div>
`;

exports[`route ranking /groups/mine 1`] = `
<div>
  MyGroup
</div>
`;

exports[`route ranking /groups/mine/users 1`] = `
<div>
  MyGroupUsers
</div>
`;

exports[`route ranking /groups/mine/users/me 1`] = `
<div>
  Mine and Me!
</div>
`;

exports[`route ranking /one/two/three/four/five 1`] = `
<div>
  Fiver 
  one
   
  two
   
  three
   
  four
   
  five
</div>
`;

exports[`smoke tests renders at a path 1`] = `
<div>
  Dash 
</div>
`;

exports[`smoke tests renders the root component at "/" 1`] = `
<div>
  Home
</div>
`;

exports[`transitions keeps the stack right on interrupted transitions 1`] = `
<div>
  Annual Report
</div>
`;

exports[`transitions transitions pages 1`] = `
<div>
  Home
</div>
`;

exports[`transitions transitions pages 2`] = `
<div>
  Reports 
</div>
`;
